IaC/aws-eks/pod-subnets.tf
resource "aws_subnet" "pod_subnet" {

  vpc_id = aws_vpc.main.id

  for_each                            = local.config.network.pod_subnets
  cidr_block                          = each.value.cidr
  availability_zone                   = each.value.az
  private_dns_hostname_type_on_launch = "resource-name"

  tags = {
    Name = "${local.config.project.name}-${each.key}"
    "kubernetes.io/cluster/${local.eks_cluster_name}" = "owned"
  }

  depends_on = [aws_vpc_ipv4_cidr_block_association.secondary_cidr]
}

resource "aws_route_table_association" "pod_subnet_association" {
  for_each       = local.config.network.pod_subnets
  subnet_id      = aws_subnet.pod_subnet[each.key].id
  route_table_id = aws_route_table.public.id # TODO: make it configurable to support private subnets
}
